# openvino.genai

./: .gitignore  .gitmodules  run_benchmark_vlm.bat  run_benchmark_vlm.sh  run_benchmark_vlm_multi_images.bat  run_benchmark_vlm_multi_images.sh  run_greedy_benchmark.bat  run_sd_benchmark.bat  run_vision_encoder_benchmark_app.bat  run_vision_encoder_benchmark_app_batch_10.bat  run_visual_language_chat.bat  run_visual_language_chat.sh  run_visual_language_chat_multi_images.bat  run_visual_language_chat_multi_images.sh
.github/workflows/: causal_lm_cpp.yml  genai_python_lib.yml
llm/cpp/: llm.cpp
llm/phi_cpp/: phi.cpp
llm/qwen_cpp/: CMakeLists.txt  base64.h  main.cpp  openvino_backend_api.cpp  openvino_backend_api.h  qwen.cpp  qwen.h  rag_model_client.cpp  rag_model_server.cpp  sampling.hpp  test.cpp  tiktoken.h
llm/qwen_cpp/test/: CMakeLists.txt  build_test.bat  test.cpp
llm/qwen_cpp/test/include/: openvino_backend_api.h
llm/qwen_cpp/test/lib/Debug/: absl_bad_any_cast_impl.lib  absl_bad_optional_access.lib  absl_bad_variant_access.lib  absl_base.lib  absl_city.lib  absl_civil_time.lib  absl_cord.lib  absl_cord_internal.lib  absl_cordz_functions.lib  absl_cordz_handle.lib  absl_cordz_info.lib  absl_cordz_sample_token.lib  absl_crc32c.lib  absl_crc_cord_state.lib  absl_crc_cpu_detect.lib  absl_crc_internal.lib  absl_debugging_internal.lib  absl_demangle_internal.lib  absl_die_if_null.lib  absl_examine_stack.lib  absl_exponential_biased.lib  absl_failure_signal_handler.lib  absl_flags.lib  absl_flags_commandlineflag.lib  absl_flags_commandlineflag_internal.lib  absl_flags_config.lib  absl_flags_internal.lib  absl_flags_marshalling.lib  absl_flags_parse.lib  absl_flags_private_handle_accessor.lib  absl_flags_program_name.lib  absl_flags_reflection.lib  absl_flags_usage.lib  absl_flags_usage_internal.lib  absl_graphcycles_internal.lib  absl_hash.lib  absl_hashtablez_sampler.lib  absl_int128.lib  absl_kernel_timeout_internal.lib  absl_leak_check.lib  (+48 more)
llm/qwen_cpp/test/lib/Release/: absl_bad_any_cast_impl.lib  absl_bad_optional_access.lib  absl_bad_variant_access.lib  absl_base.lib  absl_city.lib  absl_civil_time.lib  absl_cord.lib  absl_cord_internal.lib  absl_cordz_functions.lib  absl_cordz_handle.lib  absl_cordz_info.lib  absl_cordz_sample_token.lib  absl_crc32c.lib  absl_crc_cord_state.lib  absl_crc_cpu_detect.lib  absl_crc_internal.lib  absl_debugging_internal.lib  absl_demangle_internal.lib  absl_die_if_null.lib  absl_examine_stack.lib  absl_exponential_biased.lib  absl_failure_signal_handler.lib  absl_flags.lib  absl_flags_commandlineflag.lib  absl_flags_commandlineflag_internal.lib  absl_flags_config.lib  absl_flags_internal.lib  absl_flags_marshalling.lib  absl_flags_parse.lib  absl_flags_private_handle_accessor.lib  absl_flags_program_name.lib  absl_flags_reflection.lib  absl_flags_usage.lib  absl_flags_usage_internal.lib  absl_graphcycles_internal.lib  absl_hash.lib  absl_hashtablez_sampler.lib  absl_int128.lib  absl_kernel_timeout_internal.lib  absl_leak_check.lib  (+49 more)
llm/qwen_cpp/test/lib/pkgconfig/: absl_absl_check.pc  absl_absl_log.pc  absl_algorithm.pc  absl_algorithm_container.pc  absl_any.pc  absl_any_invocable.pc  absl_atomic_hook.pc  absl_bad_any_cast.pc  absl_bad_any_cast_impl.pc  absl_bad_optional_access.pc  absl_bad_variant_access.pc  absl_base.pc  absl_base_internal.pc  absl_bind_front.pc  absl_bits.pc  absl_btree.pc  absl_charset.pc  absl_check.pc  absl_city.pc  absl_civil_time.pc  absl_cleanup.pc  absl_cleanup_internal.pc  absl_common_policy_traits.pc  absl_compare.pc  absl_compressed_tuple.pc  absl_config.pc  absl_container_common.pc  absl_container_memory.pc  absl_cord.pc  absl_cord_internal.pc  absl_cordz_functions.pc  absl_cordz_handle.pc  absl_cordz_info.pc  absl_cordz_sample_token.pc  absl_cordz_statistics.pc  absl_cordz_update_scope.pc  absl_cordz_update_tracker.pc  absl_core_headers.pc  absl_crc32c.pc  absl_crc_cord_state.pc  (+142 more)
samples/: CMakeLists.txt  requirements.txt
samples/cpp/continuous_batching_accuracy/: continuous_batching_accuracy.cpp
samples/cpp/multinomial_causal_lm/: CMakeLists.txt  multinomial_causal_lm.cpp
samples/cpp/rag_sample/: .gitignore  CMakeLists.txt  README.md  blip_embedding_cli.cpp  convert_ov_embedding.py  embeddings.json  embeddings_sample.cpp  rag_sample_client.cpp  rag_sample_gui.cpp  rag_sample_server.cpp
samples/cpp/rag_sample/include/: blip.hpp  db_pgvector.hpp  embeddings.hpp  handle_master.hpp  reranker.hpp  state.hpp  status.hpp  util.hpp
samples/cpp/rag_sample/include/app/: gui.hpp  server_context.hpp
samples/cpp/rag_sample/scripts/: blip_test.ipynb  client_get_image_embeddings.ipynb
samples/cpp/rag_sample/src/: blip.cpp  db_pgvector.cpp  embeddings.cpp  handle_master.cpp  reranker.cpp
samples/cpp/rag_sample/src/app/: server_context.cpp
samples/cpp/text_generation/: benchmark_genai.cpp  chat_sample.cpp  greedy_causal_lm.cpp  speculative_decoding_lm.cpp
samples/cpp/visual_language_chat/: benchmark_vlm.cpp  visual_language_chat.cpp
samples/python/rag_sample/: README.md  client.py  client_get_chunks_embeddings.py  server.py
src/cpp/include/openvino/genai/: llm_pipeline.hpp
src/cpp/src/: continuous_batching_impl.cpp  continuous_batching_pipeline.cpp  llm_pipeline.cpp  llm_pipeline_stateful.cpp  timer.hpp
src/cpp/src/gguf_utils/: building_blocks.cpp  gguf.cpp  gguf.hpp  gguf_modeling.cpp
src/cpp/src/speculative_decoding/: speculative_decoding_impl.cpp
src/cpp/src/visual_language/: inputs_embedder.cpp  pipeline.cpp  vision_encoder.cpp
src/python/: CMakeLists.txt
text_generation/causal_lm/cpp/: CMakeLists.txt  prompt_lookup_decoding.cpp
tools/continuous_batching/benchmark/: CMakeLists.txt  continuous_batching_vlm_benchmark.cpp
tools/glm4v_benchmark/: benchmark_glm4v.py  convert_glm4v.py  glm4v_helper.py
tools/llm_bench/: 10.jsonl  1024.jsonl  585.jsonl  benchmark.py  benchmark_test.py  requirements.txt
tools/llm_bench/llm_bench_utils/: metrics_print.py
tools/llm_bench/task/: text_generation.py
